Fixed h2 visibility

--- a/styles/main-styles.scss
+++ b/styles/main-styles.scss
@@ -42,6 +42,9 @@ body {
 				font-weight: 700;
 				font-style: normal;
 				font-size: 22px;
+				h2{
+					font-size: 22px;
+				}
 			}
 			.qr-description{
 				font-family: "Outfit", sans-serif;
